--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="Core\AlignmentTemplates.h" />
     <ClInclude Include="File\stb_image.h" />
     <ClInclude Include="FrameResource.h" />
+    <ClInclude Include="Runtime\Core\PixelFormat.h" />
     <ClInclude Include="Runtime\Core\Template\XEngineTemplate.h" />
     <ClInclude Include="Runtime\Core\XMath.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12AbstractDevice.h" />
@@ -127,17 +128,18 @@
     <ClInclude Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.h" />
     <ClInclude Include="Runtime\HAL\Mch.h" />
     <ClInclude Include="Runtime\HAL\PlatformTypes.h" />
-    <ClInclude Include="Runtime\RenderCore\GlobalShader.h" />
-    <ClInclude Include="Runtime\RenderCore\RenderResource.h" />
-    <ClInclude Include="Runtime\RenderCore\ShaderCore.h" />
+    <ClInclude Include="Runtime\RHI\PipelineStateCache.h" />
     <ClInclude Include="Runtime\RHI\PlatformRHI.h" />
     <ClInclude Include="Runtime\RHI\RHI.h" />
     <ClInclude Include="Runtime\RHI\RHICommandList.h" />
     <ClInclude Include="Runtime\RHI\RHIContext.h" />
     <ClInclude Include="Runtime\RHI\RHIDefines.h" />
     <ClInclude Include="Runtime\RHI\RHIResource.h" />
-    <ClInclude Include="Runtime\RenderCore\Shader.h" />
     <ClInclude Include="Runtime\RHI\RHIStaticStates.h" />
+    <ClInclude Include="Runtime\RenderCore\GlobalShader.h" />
+    <ClInclude Include="Runtime\RenderCore\RenderResource.h" />
+    <ClInclude Include="Runtime\RenderCore\Shader.h" />
+    <ClInclude Include="Runtime\RenderCore\ShaderCore.h" />
     <ClInclude Include="UnitTest\GameTimer.h" />
     <ClInclude Include="UnitTest\GeometryGenerator.h" />
     <ClInclude Include="UnitTest\MathHelper.h" />
@@ -160,19 +162,23 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12PhysicDevice.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PlatformRHI.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Resource.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Rootsignature.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Shaders.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12State.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12VertexDeclaration.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Viewport.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\XD3D12CommandListManger.cpp" />
     <ClCompile Include="Runtime\Engine\SceneView.cpp" />
     <ClCompile Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.cpp" />
+    <ClCompile Include="Runtime\RHI\PipelineStateCache.cpp" />
+    <ClCompile Include="Runtime\RHI\PlatformRHI.cpp" />
+    <ClCompile Include="Runtime\RHI\RHI.cpp" />
+    <ClCompile Include="Runtime\RHI\Windows\WindowsRHI.cpp" />
     <ClCompile Include="Runtime\RenderCore\GlobalShader.cpp" />
     <ClCompile Include="Runtime\RenderCore\RenderResource.cpp" />
     <ClCompile Include="Runtime\RenderCore\Shader.cpp" />
-    <ClCompile Include="Runtime\RHI\PlatformRHI.cpp" />
-    <ClCompile Include="Runtime\RHI\Windows\WindowsRHI.cpp" />
     <ClCompile Include="UnitTest\GameTimer.cpp" />
     <ClCompile Include="UnitTest\GeometryGenerator.cpp" />
     <ClCompile Include="UnitTest\MathHelper.cpp" />
