--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -113,6 +113,7 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12PhysicDevice.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArray.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineCurrentDescArrayManager.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineState.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PlatformRHI.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Resource.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12Rootsignature.h" />
