--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -192,6 +192,7 @@
     </ClInclude>
     <ClInclude Include="xtrack_new.h" />
     <ClInclude Include="Runtime\Core\PixelFormat.h" />
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineState.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
