--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -194,6 +194,7 @@
     <ClInclude Include="Runtime\Core\PixelFormat.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineState.h" />
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineLibrary.h" />
+    <ClInclude Include="Runtime\RenderCore\ShaderParameter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
@@ -299,5 +300,6 @@
     <ClCompile Include="Runtime\RHI\RHI.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PlatformRHI.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineLibraryWindows.cpp" />
+    <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp" />
   </ItemGroup>
 </Project>
