--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="Runtime\HAL\Mch.h" />
     <ClInclude Include="Runtime\HAL\PlatformTypes.h" />
     <ClInclude Include="Runtime\RenderCore\ShaderParameter.h" />
+    <ClInclude Include="Runtime\Render\SceneRendering.h" />
     <ClInclude Include="Runtime\RHI\PipelineStateCache.h" />
     <ClInclude Include="Runtime\RHI\PlatformRHI.h" />
     <ClInclude Include="Runtime\RHI\RHI.h" />
