--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -196,6 +196,7 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineLibrary.h" />
     <ClInclude Include="Runtime\RenderCore\ShaderParameter.h" />
     <ClInclude Include="Runtime\Render\SceneRendering.h" />
+    <ClInclude Include="Runtime\RenderCore\CommonRenderRresource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
@@ -302,5 +303,6 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12PlatformRHI.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineLibraryWindows.cpp" />
     <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp" />
+    <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp" />
   </ItemGroup>
 </Project>
