--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -177,7 +177,7 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12Rootsignature.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Shader.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12State.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12VertexBuffer.cpp" />
+    <ClCompile Include="Runtime\D3D12RHI\D3D12VIBuffer.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12VertexDeclaration.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Viewport.cpp" />
     <ClCompile Include="Runtime\Engine\MaterialShared.cpp" />
