--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -99,7 +99,12 @@
     <ClInclude Include="Runtime\Core\Math\SimpleMath.h" />
     <ClInclude Include="Runtime\Core\Math\Math.h" />
     <ClInclude Include="Runtime\Core\ResourceCreateDataInterface.h" />
+    <ClInclude Include="Runtime\Engine\MaterialShaderInfo.h" />
     <ClInclude Include="Runtime\Engine\MaterialShared.h" />
+    <ClInclude Include="Runtime\Engine\MeshMaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Render\BasePassRendering.h" />
+    <ClInclude Include="Runtime\Render\MaterialShader.h" />
+    <ClInclude Include="Runtime\Render\MeshMaterialShader.h" />
     <ClInclude Include="ThirdParty\stb_image.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="Runtime\Core\PixelFormat.h" />
@@ -185,6 +190,7 @@
     <ClCompile Include="Runtime\Engine\SceneView.cpp" />
     <ClCompile Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.cpp" />
     <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp" />
+    <ClCompile Include="Runtime\RenderCore\ShaderCore.cpp" />
     <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp" />
     <ClCompile Include="Runtime\RHI\PipelineStateCache.cpp" />
     <ClCompile Include="Runtime\RHI\PlatformRHI.cpp" />
