--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -195,6 +195,11 @@
     <ClInclude Include="Runtime\Core\Math\Matrix.h" />
     <ClInclude Include="Runtime\Engine\MaterialShared.h" />
     <ClInclude Include="Runtime\Core\ResourceCreateDataInterface.h" />
+    <ClInclude Include="Runtime\Engine\MeshMaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Render\BasePassRendering.h" />
+    <ClInclude Include="Runtime\Render\MeshMaterialShader.h" />
+    <ClInclude Include="Runtime\Render\MaterialShader.h" />
+    <ClInclude Include="Runtime\Engine\MaterialShaderInfo.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
@@ -302,6 +307,7 @@
     <ClCompile Include="Runtime\Engine\Material\MaterialShader.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12VIBuffer.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Buffer.cpp" />
+    <ClCompile Include="Runtime\RenderCore\ShaderCore.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Runtime\Core\Math\SimpleMath.inl" />
