--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -99,9 +99,11 @@
     <ClInclude Include="Runtime\Core\Math\SimpleMath.h" />
     <ClInclude Include="Runtime\Core\Math\Math.h" />
     <ClInclude Include="Runtime\Core\ResourceCreateDataInterface.h" />
-    <ClInclude Include="Runtime\Engine\MaterialShaderInfo.h" />
-    <ClInclude Include="Runtime\Engine\MaterialShared.h" />
-    <ClInclude Include="Runtime\Engine\MeshMaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Engine\Classes\EngineTypes.h" />
+    <ClInclude Include="Runtime\Engine\Material\MaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Engine\Material\MaterialShared.h" />
+    <ClInclude Include="Runtime\Engine\Material\MeshMaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Engine\Material\MaterialShaderMapSet.h" />
     <ClInclude Include="Runtime\Render\BasePassRendering.h" />
     <ClInclude Include="Runtime\Render\MaterialShader.h" />
     <ClInclude Include="Runtime\Render\MeshMaterialShader.h" />
@@ -185,12 +187,11 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12VIBuffer.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12VertexDeclaration.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Viewport.cpp" />
-    <ClCompile Include="Runtime\Engine\MaterialShared.cpp" />
+    <ClCompile Include="Runtime\Engine\Material\MaterialShared.cpp" />
     <ClCompile Include="Runtime\Engine\Material\MaterialShader.cpp" />
     <ClCompile Include="Runtime\Engine\SceneView.cpp" />
     <ClCompile Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.cpp" />
     <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp" />
-    <ClCompile Include="Runtime\RenderCore\ShaderCore.cpp" />
     <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp" />
     <ClCompile Include="Runtime\RHI\PipelineStateCache.cpp" />
     <ClCompile Include="Runtime\RHI\PlatformRHI.cpp" />
