--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -193,13 +193,15 @@
     <ClInclude Include="Runtime\Core\Math\SimpleMath.h" />
     <ClInclude Include="Runtime\Core\Math\Math.h" />
     <ClInclude Include="Runtime\Core\Math\Matrix.h" />
-    <ClInclude Include="Runtime\Engine\MaterialShared.h" />
+    <ClInclude Include="Runtime\Engine\Material\MaterialShared.h" />
     <ClInclude Include="Runtime\Core\ResourceCreateDataInterface.h" />
-    <ClInclude Include="Runtime\Engine\MeshMaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Engine\Material\MeshMaterialShaderInfo.h" />
     <ClInclude Include="Runtime\Render\BasePassRendering.h" />
     <ClInclude Include="Runtime\Render\MeshMaterialShader.h" />
     <ClInclude Include="Runtime\Render\MaterialShader.h" />
-    <ClInclude Include="Runtime\Engine\MaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Engine\Material\MaterialShaderInfo.h" />
+    <ClInclude Include="Runtime\Engine\Classes\EngineTypes.h" />
+    <ClInclude Include="Runtime\Engine\Material\MaterialShaderMapSet.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
@@ -303,11 +305,10 @@
     <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp" />
     <ClCompile Include="Runtime\Core\Math\SimpleMath.cpp" />
     <ClCompile Include="Runtime\Core\Math\Math.cpp" />
-    <ClCompile Include="Runtime\Engine\MaterialShared.cpp" />
+    <ClCompile Include="Runtime\Engine\Material\MaterialShared.cpp" />
     <ClCompile Include="Runtime\Engine\Material\MaterialShader.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12VIBuffer.cpp" />
     <ClCompile Include="Runtime\D3D12RHI\D3D12Buffer.cpp" />
-    <ClCompile Include="Runtime\RenderCore\ShaderCore.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Runtime\Core\Math\SimpleMath.inl" />
