--- a/Source/project_xengine.vcxproj
+++ b/Source/project_xengine.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="Runtime\Engine\Classes\EngineTypes.h" />
     <ClInclude Include="Runtime\Engine\Material\MaterialShared.h" />
     <ClInclude Include="Runtime\Engine\Material\MaterialShaderMapSet.h" />
+    <ClInclude Include="Runtime\RenderCore\VertexFactory.h" />
     <ClInclude Include="Runtime\Render\BasePassRendering.h" />
     <ClInclude Include="Runtime\Render\MaterialShader.h" />
     <ClInclude Include="Runtime\Render\MeshMaterialShader.h" />
@@ -192,6 +193,7 @@
     <ClCompile Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.cpp" />
     <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp" />
     <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp" />
+    <ClCompile Include="Runtime\RenderCore\VertexFactory.cpp" />
     <ClCompile Include="Runtime\RHI\PipelineStateCache.cpp" />
     <ClCompile Include="Runtime\RHI\PlatformRHI.cpp" />
     <ClCompile Include="Runtime\RHI\RHI.cpp" />
