--- a/Source/project_xengine.vcxproj.filters
+++ b/Source/project_xengine.vcxproj.filters
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Core">
-      <UniqueIdentifier>{2EB4837C-1AEB-840D-C3D7-6A10AFED000F}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="File">
-      <UniqueIdentifier>{053F857C-F175-860D-9A62-6C108678020F}</UniqueIdentifier>
+    <Filter Include="Editor">
+      <UniqueIdentifier>{8C1A20B0-78BC-4A86-6177-5EDA4DB8D1D6}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime">
       <UniqueIdentifier>{4995DAC4-B574-5960-BE8C-E4362AEBBFC1}</UniqueIdentifier>
@@ -13,8 +10,17 @@
     <Filter Include="Runtime\Core">
       <UniqueIdentifier>{416F811B-2DD2-10C0-D657-4976C299DC42}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Runtime\Core\Math">
+      <UniqueIdentifier>{BA84DCFB-269B-DA91-6F12-66B3DB67AB19}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Runtime\Core\Template">
       <UniqueIdentifier>{6CA3D385-D80F-8F80-A103-27DE0D2FB1E8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\CoreGObject">
+      <UniqueIdentifier>{BF3B3DA1-2B9D-1AAF-B40A-6161206B516E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\CoreGObject\GObjtect">
+      <UniqueIdentifier>{A075DE5F-8C30-CE0B-35E8-46562182189C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime\D3D12RHI">
       <UniqueIdentifier>{9949F743-8542-1696-AE74-FB1A9ACCF5A1}</UniqueIdentifier>
@@ -24,6 +30,12 @@
     </Filter>
     <Filter Include="Runtime\Engine">
       <UniqueIdentifier>{AE932C06-9A61-200C-83F5-90326F62FC70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\Engine\Classes">
+      <UniqueIdentifier>{8BD0419C-77CA-6AEE-6037-01FF4CD0D05A}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\Engine\Material">
+      <UniqueIdentifier>{0CC6A13B-78FD-E9D2-8107-4EF6EDBD10CC}</UniqueIdentifier>
     </Filter>
     <Filter Include="Runtime\Engine\ShaderCompiler">
       <UniqueIdentifier>{CFE73D60-3B00-258A-04AD-B4237084B923}</UniqueIdentifier>
@@ -37,23 +49,53 @@
     <Filter Include="Runtime\RHI\Windows">
       <UniqueIdentifier>{35B35E63-A114-3C71-2A82-822396E27230}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Runtime\ReflectionGen">
+      <UniqueIdentifier>{FDD03302-693D-EFFC-3231-875A9E5C1165}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Runtime\Render">
+      <UniqueIdentifier>{9887E023-8455-D429-6DE9-44505956B08E}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Runtime\RenderCore">
       <UniqueIdentifier>{4138B1A9-2D1C-72FF-967C-6C52827F5C81}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ThirdParty">
+      <UniqueIdentifier>{107145F9-FC28-8746-6530-60A251072237}</UniqueIdentifier>
     </Filter>
     <Filter Include="UnitTest">
       <UniqueIdentifier>{E5A465FE-D171-C009-FA8A-AEB1E6B6F597}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ThirdParty\stb_image.h">
-      <Filter>File</Filter>
+    <ClInclude Include="Editor\EditorUI.h">
+      <Filter>Editor</Filter>
     </ClInclude>
     <ClInclude Include="FrameResource.h" />
+    <ClInclude Include="Runtime\Core\Math\Math.h">
+      <Filter>Runtime\Core\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Core\Math\Matrix.h">
+      <Filter>Runtime\Core\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Core\Math\SimpleMath.h">
+      <Filter>Runtime\Core\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Core\PixelFormat.h">
+      <Filter>Runtime\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Core\ResourceCreateDataInterface.h">
+      <Filter>Runtime\Core</Filter>
+    </ClInclude>
     <ClInclude Include="Runtime\Core\Template\XEngineTemplate.h">
       <Filter>Runtime\Core\Template</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\Core\XMath.h">
       <Filter>Runtime\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\CoreGObject\GObjtect\Object.h">
+      <Filter>Runtime\CoreGObject\GObjtect</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\CoreGObject\GObjtect\Reflection.h">
+      <Filter>Runtime\CoreGObject\GObjtect</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\D3D12RHI\D3D12AbstractDevice.h">
       <Filter>Runtime\D3D12RHI</Filter>
@@ -79,16 +121,22 @@
     <ClInclude Include="Runtime\D3D12RHI\D3D12DescriptorArray.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
+    <ClInclude Include="Runtime\D3D12RHI\D3D12OnlineDescArray.h">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\D3D12RHI\D3D12OnlineDescArrayManager.h">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClInclude>
     <ClInclude Include="Runtime\D3D12RHI\D3D12PassStateManager.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\D3D12RHI\D3D12PhysicDevice.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\D3D12RHI\D3D12OnlineDescArray.h">
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineLibrary.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\D3D12RHI\D3D12OnlineDescArrayManager.h">
+    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineState.h">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\D3D12RHI\D3D12PlatformRHI.h">
@@ -121,11 +169,23 @@
     <ClInclude Include="Runtime\DataStruct\XRefCountPtr.h">
       <Filter>Runtime\DataStruct</Filter>
     </ClInclude>
+    <ClInclude Include="Runtime\Engine\Classes\EngineTypes.h">
+      <Filter>Runtime\Engine\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Engine\Material\MaterialShaderMapSet.h">
+      <Filter>Runtime\Engine\Material</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Engine\Material\MaterialShared.h">
+      <Filter>Runtime\Engine\Material</Filter>
+    </ClInclude>
     <ClInclude Include="Runtime\Engine\SceneView.h">
       <Filter>Runtime\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.h">
       <Filter>Runtime\Engine\ShaderCompiler</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Engine\UIBackend.h">
+      <Filter>Runtime\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Runtime\HAL\Mch.h">
       <Filter>Runtime\HAL</Filter>
@@ -157,6 +217,27 @@
     <ClInclude Include="Runtime\RHI\RHIStaticStates.h">
       <Filter>Runtime\RHI</Filter>
     </ClInclude>
+    <ClInclude Include="Runtime\Render\BasePassRendering.h">
+      <Filter>Runtime\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Render\DeferredShadingRenderer.h">
+      <Filter>Runtime\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Render\MaterialShader.h">
+      <Filter>Runtime\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Render\MeshMaterialShader.h">
+      <Filter>Runtime\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Render\MeshPassProcessor.h">
+      <Filter>Runtime\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\Render\SceneRendering.h">
+      <Filter>Runtime\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\RenderCore\CommonRenderRresource.h">
+      <Filter>Runtime\RenderCore</Filter>
+    </ClInclude>
     <ClInclude Include="Runtime\RenderCore\GlobalShader.h">
       <Filter>Runtime\RenderCore</Filter>
     </ClInclude>
@@ -168,6 +249,15 @@
     </ClInclude>
     <ClInclude Include="Runtime\RenderCore\ShaderCore.h">
       <Filter>Runtime\RenderCore</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\RenderCore\ShaderParameter.h">
+      <Filter>Runtime\RenderCore</Filter>
+    </ClInclude>
+    <ClInclude Include="Runtime\RenderCore\VertexFactory.h">
+      <Filter>Runtime\RenderCore</Filter>
+    </ClInclude>
+    <ClInclude Include="ThirdParty\stb_image.h">
+      <Filter>ThirdParty</Filter>
     </ClInclude>
     <ClInclude Include="UnitTest\GameTimer.h">
       <Filter>UnitTest</Filter>
@@ -184,29 +274,26 @@
     <ClInclude Include="UnitTest\d3dUtil.h">
       <Filter>UnitTest</Filter>
     </ClInclude>
-    <ClInclude Include="Runtime\Core\PixelFormat.h" />
-    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineState.h" />
-    <ClInclude Include="Runtime\D3D12RHI\D3D12PipelineLibrary.h" />
-    <ClInclude Include="Runtime\RenderCore\ShaderParameter.h" />
-    <ClInclude Include="Runtime\Render\SceneRendering.h" />
-    <ClInclude Include="Runtime\RenderCore\CommonRenderRresource.h" />
-    <ClInclude Include="Runtime\Core\Math\SimpleMath.h" />
-    <ClInclude Include="Runtime\Core\Math\Math.h" />
-    <ClInclude Include="Runtime\Core\Math\Matrix.h" />
-    <ClInclude Include="Runtime\Engine\Material\MaterialShared.h" />
-    <ClInclude Include="Runtime\Core\ResourceCreateDataInterface.h" />
-    <ClInclude Include="Runtime\Render\BasePassRendering.h" />
-    <ClInclude Include="Runtime\Render\MeshMaterialShader.h" />
-    <ClInclude Include="Runtime\Render\MaterialShader.h" />
-    <ClInclude Include="Runtime\Engine\Classes\EngineTypes.h" />
-    <ClInclude Include="Runtime\Engine\Material\MaterialShaderMapSet.h" />
-    <ClInclude Include="Runtime\Render\MeshPassProcessor.h" />
-    <ClInclude Include="Runtime\RenderCore\VertexFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CrateApp.cpp" />
+    <ClCompile Include="Editor\EditorUI.cpp">
+      <Filter>Editor</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\Core\Math\Math.cpp">
+      <Filter>Runtime\Core\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\Core\Math\SimpleMath.cpp">
+      <Filter>Runtime\Core\Math</Filter>
+    </ClCompile>
     <ClCompile Include="Runtime\Core\XMath.cpp">
       <Filter>Runtime\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\CoreGObject\GObjtect\Object.cpp">
+      <Filter>Runtime\CoreGObject\GObjtect</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\CoreGObject\GObjtect\Reflection.cpp">
+      <Filter>Runtime\CoreGObject\GObjtect</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12AbstractDevice.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
@@ -215,6 +302,9 @@
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12Allocation.cpp">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Buffer.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12CommandList.cpp">
@@ -229,16 +319,22 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12DescriptorArray.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
+    <ClCompile Include="Runtime\D3D12RHI\D3D12OnlineDescArray.cpp">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\D3D12RHI\D3D12OnlineDescArrayManager.cpp">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12PassStateManager.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12PhysicDevice.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\D3D12RHI\D3D12OnlineDescArray.cpp">
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineLibraryWindows.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\D3D12RHI\D3D12OnlineDescArrayManager.cpp">
+    <ClCompile Include="Runtime\D3D12RHI\D3D12PlatformRHI.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12Resource.cpp">
@@ -253,11 +349,23 @@
     <ClCompile Include="Runtime\D3D12RHI\D3D12State.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
+    <ClCompile Include="Runtime\D3D12RHI\D3D12Texture.cpp">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\D3D12RHI\D3D12VIBuffer.cpp">
+      <Filter>Runtime\D3D12RHI</Filter>
+    </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12VertexDeclaration.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\D3D12RHI\D3D12Viewport.cpp">
       <Filter>Runtime\D3D12RHI</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\Engine\Material\MaterialShader.cpp">
+      <Filter>Runtime\Engine\Material</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\Engine\Material\MaterialShared.cpp">
+      <Filter>Runtime\Engine\Material</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\Engine\SceneView.cpp">
       <Filter>Runtime\Engine</Filter>
@@ -265,14 +373,26 @@
     <ClCompile Include="Runtime\Engine\ShaderCompiler\ShaderCompiler.cpp">
       <Filter>Runtime\Engine\ShaderCompiler</Filter>
     </ClCompile>
+    <ClCompile Include="Runtime\Engine\UIBackend.cpp">
+      <Filter>Runtime\Engine</Filter>
+    </ClCompile>
     <ClCompile Include="Runtime\RHI\PipelineStateCache.cpp">
       <Filter>Runtime\RHI</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\RHI\PlatformRHI.cpp">
       <Filter>Runtime\RHI</Filter>
     </ClCompile>
+    <ClCompile Include="Runtime\RHI\RHI.cpp">
+      <Filter>Runtime\RHI</Filter>
+    </ClCompile>
     <ClCompile Include="Runtime\RHI\Windows\WindowsRHI.cpp">
       <Filter>Runtime\RHI\Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\ReflectionGen\Object.gen.cpp">
+      <Filter>Runtime\ReflectionGen</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp">
+      <Filter>Runtime\RenderCore</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\RenderCore\GlobalShader.cpp">
       <Filter>Runtime\RenderCore</Filter>
@@ -281,6 +401,12 @@
       <Filter>Runtime\RenderCore</Filter>
     </ClCompile>
     <ClCompile Include="Runtime\RenderCore\Shader.cpp">
+      <Filter>Runtime\RenderCore</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp">
+      <Filter>Runtime\RenderCore</Filter>
+    </ClCompile>
+    <ClCompile Include="Runtime\RenderCore\VertexFactory.cpp">
       <Filter>Runtime\RenderCore</Filter>
     </ClCompile>
     <ClCompile Include="UnitTest\GameTimer.cpp">
@@ -298,20 +424,5 @@
     <ClCompile Include="UnitTest\d3dUtil.cpp">
       <Filter>UnitTest</Filter>
     </ClCompile>
-    <ClCompile Include="Runtime\RHI\RHI.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12PlatformRHI.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12PipelineLibraryWindows.cpp" />
-    <ClCompile Include="Runtime\RenderCore\ShaderParameter.cpp" />
-    <ClCompile Include="Runtime\RenderCore\CommonRenderRresource.cpp" />
-    <ClCompile Include="Runtime\Core\Math\SimpleMath.cpp" />
-    <ClCompile Include="Runtime\Core\Math\Math.cpp" />
-    <ClCompile Include="Runtime\Engine\Material\MaterialShared.cpp" />
-    <ClCompile Include="Runtime\Engine\Material\MaterialShader.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12VIBuffer.cpp" />
-    <ClCompile Include="Runtime\D3D12RHI\D3D12Buffer.cpp" />
-    <ClCompile Include="Runtime\RenderCore\VertexFactory.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Runtime\Core\Math\SimpleMath.inl" />
   </ItemGroup>
 </Project>
